fix overflow scroll bars on pc

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,7 +44,7 @@ body {
 
   nav ul {
     // margin-top: 5rem;
-    overflow-x: scroll;
+    overflow-x: visible;
   }
 
   nav ul a {
@@ -392,6 +392,10 @@ figure.logo {
 .main-footer {
   width: 100%;
   max-width: 100%;
+
+  nav {
+    overflow-y: visible;
+  }
 
   .base-footer {
     width: 100%;
